# ninetoothed

./: .buildinfo  CHANGES_CN.md  CNAME  CONTRIBUTING.md  HONOR_CODE.md  PR_DESCRIPTION.md  README.md  REFERENCE.md  basics.html  build.html  code_generation.html  debug_names.py  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  python_api.html  requirements.txt  search.html  searchindex.js  show_results.py  symbol.html  tensor.html  visualization.html
.claude/skills/ninetoothed-operator/: SKILL.md  reference.md
.githooks/: commit-msg  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  feature-request.yml
.github/workflows/: publish-to-pypi.yml  pytest.yml  ruff.yml  sphinx.yml
_sources/: index.rst.txt  python_api.rst.txt  symbol.rst.txt
_sources/python_api/: debugging.rst.txt  tensor.rst.txt
benchmarks/: bench_matmul.py  bench_specialization.py  bench_specialization_results.json
docs/: README.zh.md  cache.md
docs/source/: basics.rst  build.rst  conf.py  index.rst  installation.rst  python_api.rst  tensor.rst  visualize.py
docs/source/python_api/: code_generation.rst  tensor.rst  visualization.rst
python_api/: code_generation.html  debugging.html  symbol.html  tensor.html  visualization.html
report/: weakness_analysis.md  九齿编译优化_T1-2-1_赛题报告.md  何ev_中期报告.md  何ev_九齿编译优化_T1-2-1_赛题报告.md
skills/competition/nineops-skills/: CLAUDE.md  README.md  SKILL.md
src/ninetoothed/: AscendAOTBackend.py  __init__.py  _cache.py  advanced_passes.py  aot.py  ascendaotbackend.py  ascendifier.py  auto_tuner.py  build.py  cse.py  cudaaotbackend.py  cudaifier.py  debugging.py  dtype.py  eval.py  fusion.py  generation.py  jit.py  language.py  licm.py  make.py  naming.py  nt_tuner.py  parallelize.py  symbol.py  tensor.py  torchifier.py  utils.py  visualization.py
src/ninetoothed/generation/: __init__.py  generation.py  (+3 more)
tests/: conftest.py  skippers.py  test_add.py  test_addmm.py  test_aot.py  test_aot_auto_tuning.py  test_atomic_write.py  test_attention.py  test_auto_tuner.py  test_cache.py  test_clone.py  test_conv2d.py  test_conv2d_pad.py  test_cse.py  test_data_ptr.py  test_debugging.py  test_dropout.py  test_eval.py  test_expand.py  test_generation.py  test_getitem.py  test_ipynb.py  test_jagged.py  test_licm.py  test_make_cache_key.py  test_matmul.py  test_max_pool2d.py  test_naming.py  test_pad.py  test_parallelize.py  test_pow.py  test_slice.py  test_slice_assignment.py  test_softmax.py  test_specialization.py  test_symbol_arithmetic.py  test_tuner.py  test_unsqueeze.py  utils.py
(+49 files in other folders)
